tests/baselines/reference/tripleSlashTypesReferenceWithMissingExports(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/compiler/usage.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/compiler/node_modules/pkg/index.d.ts (0 errors) ====
    interface GlobalThing { a: number }
==== tests/cases/compiler/node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "types": "index.d.ts",
        "exports": "some-other-thing.js"
    }
==== tests/cases/compiler/usage.ts (1 errors) ====
    /// <reference types="pkg" />
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    
    const a: GlobalThing = { a: 0 };